# cliproxyapi-usage

./: .gitignore  AGENTS.md  LICENSE  README.md  flake.nix  pyproject.toml
docs/: time-range-filter-redesign.md  unified-explorer-preview.html  usage-dashboard-unified-explorer-design.md
docs/superpowers/plans/: 2026-05-04-redis-usage-queue-collector.md  (+1 more)
frontend/: README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: usage-config.js
frontend/src/: main.tsx  router.tsx
src/cliproxy_usage/: cli.py  client.py  config.py  db.py  parser.py  schemas.py
src/cliproxy_usage_collect/: cli.py  client.py  config.py  db.py  parser.py  queue_client.py  schemas.py
src/cliproxy_usage_server/: aggregate.py  config.py  db.py  main.py  pricing.py  pricing_refresh.py  redact.py  schemas.py
tests/: conftest.py  test_cli.py  test_client.py  test_collect_package.py  test_config.py  test_db.py  test_parser.py  test_pricing.py  test_pricing_refresh.py  test_pricing_resolve.py  test_pricing_split.py  test_queue_client.py  test_queue_parser.py  test_quota_cache.py  test_quota_client.py  test_quota_providers_claude.py  test_quota_providers_codex.py  test_quota_providers_registry.py  test_quota_routes.py  test_quota_service.py  test_redact.py  test_routes_pricing.py  test_routes_usage.py  test_schemas_quota.py  test_server_aggregate.py  test_server_app.py  test_server_config.py  test_server_db.py
tests/fixtures/: claude-api-call.json  codex-api-call.json  litellm-pricing-fixture.json  usage-export-2026-04-23T05-01-45-283Z.json
(+82 files in other folders)
